trunk/yanl/examples/t1/correct/0403_sums.yanl
program sums;
var a,b,c,d:integer;
begin
  a := a + b + c + d;
  a := a - b - c - d;
  a := - a - b - c - d;
  a := -a;
  a := -c -- d -- a -- b;
end.

