trunk/yanl/examples/t1/fail/indexare_gresita_2.yanl
# Un scalar nu poate fi folosit ca un array

program dude;
var a:integer;
    b:real;

function f(z:integer):integer
begin
  f:=b[3]+1;
end;

begin
  writeinteger(20);
end.